fixed a few layout bugs

--- a/style.css
+++ b/style.css
@@ -37,13 +37,14 @@ nav>ul>li>a{ color: #233C04;}
 
 
 h4{text-align: center;}
+
 #portfolio{display: flex; flex-flow:row wrap; justify-content: space-around;}
 li, p, h3{color: #233C04;}
 h3{text-align: center;}
-.category{text-align: center; background-color: #FFFFFF; min-width:30vw; margin: 5%; }
-.category>img{ width:100%; height:80%;object-fit: cover; border-radius: 10px;}
-a{text-decoration: none;}
+.category{ width:90vw; margin: 5%; border-color:blue; }
 
+.category img{ width:100%; height:80%;object-fit: cover; border-radius: 10px;}
+a{text-decoration: none;}
 
 
 
@@ -51,18 +52,18 @@ a{text-decoration: none;}
 footer{font-size: 14px; text-align: center;}
 
 
-@media screen and (min-width: 800px) {
-    #logo>img{width: 20vw; height: auto; padding: 20px;}    
-    nav{flex: 1; display:flex; justify-content: right;}
-    nav>ul{width:50%; display: flex; flex-flow: row wrap; justify-content:space-around;}
-    nav>ul>li{font-size: 18px;list-style-type: none; margin-left: -50px;}
-    #intro{width:60%;}
-    #intro>div:nth-child(1){flex:2 ; text-align:justify;font-size: 24px;padding:2%;}
-    #profile_image>img{width: 160px; height: 160px; border-radius: 200px;display: block;
-        margin:auto; margin-top: 15%; object-fit: cover;}
-    .category{flex:1; max-width:24vw; }
-    
+@media screen and (min-width: 767px) and (max-width:1000px) {
+.category{max-width:45vw;margin:0; border-color: red;}
 }
+
+@media screen and (min-width:1008px){
+    .category{width:20vw;}
+    #logo{width: 20vw;}
+    header{display: flex;}
+    nav{flex:1; display: flex;}
+    a{font-size: 24px;}
+}   
+
 
 
 
